ribbit/tests/ui/mismatch_size_field.stderr
error: Size attribute #[ribbit(size = 3)] does not match size of u8: 8
 --> tests/ui/mismatch_size_field.rs:5:9
  |
5 |     lo: u8,
  |         ^^
